--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Testing GUS Markdown logic</title>
-    <link href="../styles/style.css" rel="stylesheet">
+    <link href="./styles/style.css" rel="stylesheet">
   </head>
   <body>
     <textarea id="enter"></textarea>
@@ -10,4 +10,8 @@
     </div>
   </body>
   <script type="text/javascript" src="concatenated.js"></script>
+ <!--  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
+  <script type="text/javascript" src="./texttransform.js"></script>
+  <script type="text/javascript" src="./codepen.js"></script> -->
 </html>
