--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
     <textarea id="enter"></textarea>
     <div id="myhtml"></div>
 
-    <!--
-    <script type="text/javascript" src="concatenated.js"></script>
-    -->
 
-    <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="concatenated.js"></script>
+
+
+   <!--  <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="../../node_modules/marked/lib/marked.js"></script>
     <script type="text/javascript" src="texttransform.js"></script>
-    <script type="text/javascript" src="codepen.js"></script>
+    <script type="text/javascript" src="codepen.js"></script> -->
   </body>
 </html>
