changed from concat to rollup

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="myhtml"></div>
 
 
-    <script type="text/javascript" src="concatenated.js"></script>
+    <script type="text/javascript" src="rolled.js"></script>
 
 
    <!--  <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
