Test Page Redesign

--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,25 @@
 <html>
   <head>
     <title>Testing GUS Markdown logic</title>
-    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+
+    <select id="loaders">
+      <option value="000">Sample Data</option>
+    </select>
+
     <textarea id="enter"></textarea>
     <div id="myhtml"></div>
 
-
     <script type="text/javascript" src="rolled.js"></script>
 
-
-   <!--  <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
+  <!--
+    <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="../../node_modules/marked/lib/marked.js"></script>
     <script type="text/javascript" src="texttransform.js"></script>
-    <script type="text/javascript" src="codepen.js"></script> -->
+    <script type="text/javascript" src="codepen.js"></script>
+  -->
   </body>
 </html>
