--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
       <select id="loaders">
         <option value="000">Sample Data</option>
       </select>
-      <div class="top-row-div"><input type="radio" name="transformType" value="GUS Markdown" checked>
-      <span>GUS Markdown</span></div>
-      <div class="top-row-div"><input type="radio" name="transformType" value="Marked">
-      <span>Marked</span></div>
-      <div class="top-row-div"><input type="radio" name="transformType" value="Text Transform">
-      <span>Text Transform</span></div>
+      <label class="top-row-div"><input type="radio" name="transformType" value="GUS Markdown" checked>
+      <span>GUS Markdown</span></label>
+      <label class="top-row-div"><input type="radio" name="transformType" value="Marked">
+      <span>Marked</span></label>
+      <label class="top-row-div"><input type="radio" name="transformType" value="Text Transform">
+      <span>Text Transform</span></label>
     </div>
 
     <textarea id="enter"></textarea>
