--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 
     <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="../../node_modules/marked/lib/marked.js"></script>
+    <script type="text/javascript" src="../../node_modules/he/he.js"></script>
     <script type="text/javascript" src="texttransform.js"></script>
     <script type="text/javascript" src="codepen.js"></script>
 
